# redline

./: .gitignore  .vale.ini  CLAUDE.md  LICENSE  PRODUCT-BRIEF.md  PRODUCT-MAP.md  README.md  pyproject.toml
.github/workflows/: test.yml
cli/redline/: __init__.py  __main__.py  ai.py  cli.py  config.py  generator.py  registry.py  report.py  runner.py
docs/: index.html
fixtures/failing/: aml-policy-bad.md  finra-communication-bad.md  sar-narrative-bad.md  sec-marketing-bad.md  sox-control-description-bad.md
fixtures/passing/: aml-policy-good.md  finra-communication-good.md  sar-narrative-good.md  sec-marketing-good.md  sox-control-description-good.md
prs/: comply-changes.md  comply-pr-description.md
regulations/: schema.json
regulations-source/: soc2-trust-services-criteria.md
regulations/bsa-aml/: aml-program.yml  cdd-procedures.yml  ctr-procedures.yml  sar-narrative.yml
regulations/finra/: rule-2111.yml  rule-2210.yml  rule-3110.yml
regulations/gdpr/: gdpr.yml  gdpr_audit_trail.json
regulations/hipaa/: hipaa.yml  hipaa_audit_trail.json
regulations/iso27001/: iso27001.yml  iso27001_audit_trail.json
regulations/pipeda/: pipeda.yml
regulations/quebec-law25/: quebec-law25.yml
regulations/sec/: adv-filing.yml  marketing-rule-206-4-1.yml  marketing-rule-206-4-7.yml
regulations/soc2/: soc2.yml  soc2_audit_trail.json
regulations/sox/: pcaob-standards.yml  section-302.yml  section-404.yml
sale/: buyer-list.md  demo-script.md  outreach-emails.md
templates/: report.md.j2
tests/test_cli/: test_ai.py  test_cli_commands.py  test_config.py
tests/test_generator/: test_generator.py
tests/test_registry/: test_registry.py  test_schema.py
tests/test_report/: test_report.py
vale-packages/FinCompliance/: AMLMissingHighRiskFactors.yml  AMLVagueRiskAssessment.yml  CDDVagueRiskRating.yml  CTRVagueTimelines.yml  DateFormat.yml  DefinedTermConsistency.yml  FINRAMissingPrincipalApproval.yml  FINRAPastPerformanceDisclaimer.yml  FINRAProhibitedCommunications.yml  FINRAProjectedReturns.yml  FINRASuitabilityLanguage.yml  FINRAUnbalancedPresentation.yml  FINRAVagueCommunicationReview.yml  FINRAVagueSuitabilityAnalysis.yml  FINRAVagueSupervisorySystem.yml  GDPRInsufficientBreachNotification.yml  GDPRMissingDPIA.yml  GDPRMissingDPO.yml  GDPRMissingRetention.yml  GDPRVagueDataTransfer.yml  GDPRVagueLegalBasis.yml  GDPRVagueProcessorObligations.yml  GDPRWeakConsentLanguage.yml  GDPRWeakPrivacyByDesign.yml  GDPRWeakSubjectRights.yml  HIPAAMissingDisposalProcedures.yml  HIPAAMissingRiskAnalysis.yml  HIPAAUndefinedTraining.yml  HIPAAVagueAccessControls.yml  HIPAAVagueBAALanguage.yml  HIPAAVagueContingencyPlan.yml  HIPAAVagueMinimumNecessary.yml  HIPAAWeakEncryption.yml  HIPAAWeakIncidentResponse.yml  HIPAAWeakPhysicalSafeguards.yml  ISO27001MissingIncidentManagement.yml  ISO27001UndefinedAccessPolicy.yml  ISO27001UndefinedAwareness.yml  ISO27001VagueBCP.yml  ISO27001VagueCryptographyPolicy.yml  (+63 more)
