[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redline-compliance"
version = "0.2.0"
description = "Deterministic compliance document linter with regulation-traceable rules. 65 rules across SOC2, GDPR, HIPAA, ISO 27001, BSA/AML, SEC, FINRA, SOX."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bipin Rimal", email = "bipinrimal314@gmail.com" }
]
keywords = ["compliance", "linting", "soc2", "gdpr", "hipaa", "iso27001", "bsa", "aml", "sec", "finra", "sox", "vale", "regtech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
redline = "redline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["cli/redline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["cli"]
